--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "request-promise-native": "^1.0.5",
     "util": "^0.11.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.2.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/matt-auckland/openalias-register.git"
